fixed sidebar flicker

--- a/src/styles/componentStyles/componentStyles.scss
+++ b/src/styles/componentStyles/componentStyles.scss
@@ -109,7 +109,7 @@
 
 .sidebar.close {
     left: 0;
-    animation: slide-close 1.0s forwards;
+    animation: slide-close 0.0s forwards;
 }
 
 @keyframes slide-open {
